--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-　　<html>
-    　　<head>
-        　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        　　　　<title>{{ page.title }}</title>
-        　　</head>
-    　　<body>
-
-        　　　　{{ content }}
-
-        　　</body>
-    　　</html>
+<html lang="en">
+    {% include head.html %}
+    <body>
+        {% include header.html %}
+        <section id="content">
+            <div class="container m-t-lg m-b-lg">
+                <div class="row">
+                    <div class="col-sm-9">
+                        <div class="blog-post">
+                            {{ content }}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
+</html>
