--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     {% include head.html %}
     <body>
         {% include header.html %}
-        <section id="content">
+        <section id="content" style="background:url(/assets/images/aa.jpg) no-repeat center">
             <div class="container m-t-lg m-b-lg">
                 <div class="row">
                     <div class="col-sm-9">
