--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <body>
         {% include header.html %}
 
-    <section id="content" style="background:url({{ "/assets/images/aa.jpg" | prepend: site.baseurl }}) no-repeat center">
+        <section id="content">
             <div class="container m-t-lg m-b-lg">
                 <div class="row">
                     <div class="col-sm-9">
