--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="###">Home</a></li>
         <li><a href="###">Category</a></li>
-        <li><a href="###">About me</a></li>
+        <li><a href="{{ "/about.html" | prepend: site.baseurl }}">About me</a></li>
       </ul>
     </div>
   </div>
