--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header id="header" class="navbar navbar-fixed-top bg-white box-shadow b-b b-light"  data-spy="affix" data-offset-top="1">
   <div class="container">
     <div class="navbar-header">
-    <a href="###" class="navbar-brand"><img src="{{ "/assets/images/Logo.png" | prepend: site.baseurl }}" class="m-r-sm"><span class="text-muted">alshin</span></a>
+        <a href="{{ "/index.html" | prepend: site.baseurl }}" class="navbar-brand"><img src="{{ "/assets/images/Logo.png" | prepend: site.baseurl }}" class="m-r-sm"><span class="text-muted">alshin</span></a>
       <button class="btn btn-link visible-xs" type="button" data-toggle="collapse" data-target=".navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="###">Home</a></li>
+        <li><a href="{{ "/index.html" | prepend: site.baseurl }}">HOME</a></li>
         <li><a href="###">Category</a></li>
         <li><a href="{{ "/about.html" | prepend: site.baseurl }}">About me</a></li>
       </ul>
