--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,7 @@
                     <img id="avatar" class="2x" src="{{ "/assets/images/profile.jpg" | prepend: site.baseurl }}">
                 </a>
                 <h1>alshin</h1>
-                <h2>Designer + Engineer = Designeer</h2>
+                <h2>耿耿直始，百折不回</h2>
             </header>
         </section>
 
