--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -34,6 +34,7 @@
                 <p class="small">
                     © 版权所有 alshin
                 </p>
+                <span data-hk-page="current"> - </span>
             </footer>
 
         </section>
