--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header id="header" class="navbar navbar-fixed-top bg-white box-shadow b-b b-light"  data-spy="affix" data-offset-top="1">
   <div class="container">
     <div class="navbar-header">
-        <a href="{{ "/index.html" | prepend: site.baseurl }}" class="navbar-brand"><img src="{{ "/assets/images/Logo.png" | prepend: site.baseurl }}" class="m-r-sm"><span class="text-muted">alshin</span></a>
+        <a href="{{ "/index.html" | prepend: site.baseurl }}" class="navbar-brand">
+            <span class="text-muted">alshin</span>
+        </a>
       <button class="btn btn-link visible-xs" type="button" data-toggle="collapse" data-target=".navbar-collapse">
         <i class="fa fa-bars"></i>
       </button>
