--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
         <li><a href="{{ "/index.html" | prepend: site.baseurl }}">HOME</a></li>
         <li><a href="###">Category</a></li>
         <li><a href="{{ "/about.html" | prepend: site.baseurl }}">About me</a></li>
+        <li><a href="{{ "/timeline.html" | prepend: site.baseurl }}">Timeline</a></li>
       </ul>
     </div>
   </div>
