--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,14 +6,14 @@
     <title>{% if page.title %}{{ site.title }} - {{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "/assets/css/bootstrap.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/animate.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/font.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/landing.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/app.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/highlight.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl + "/assets/css/bootstrap.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl + "/assets/css/animate.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl + "/assets/css/font-awesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl + "/assets/css/font.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl +  "/assets/css/landing.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl + "/assets/css/app.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl +  "/assets/css/highlight.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ site.baseurl +  "/assets/css/custom.css" | prepend: site.baseurl }}">
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1259096643'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1259096643' type='text/javascript'%3E%3C/script%3E"));</script>
