--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@
         <section id="wrapper">
             <header id="header">
                 <a href="{{ "/about.html" | prepend: site.baseurl }}">
-                    <img id="avatar" class="2x" src="{{ site.baseurl + "/assets/images/profile.jpg" | prepend: site.baseurl }}">
+                    <img id="avatar" class="2x" src="{{ "/assets/images/profile.jpg" | prepend: site.baseurl }}">
                 </a>
                 <h1>alshin</h1>
                 <h2>耿耿直始，百折不回</h2>
