--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="header" class="navbar navbar-fixed-top bg-white box-shadow b-b b-light"  data-spy="affix" data-offset-top="1">
   <div class="container">
     <div class="navbar-header">
-        <a href="{{ "/index.html" | prepend: site.baseurl }}" class="navbar-brand">
+        <a href="{{ site.baseurl + "/index.html" }}" class="navbar-brand">
           <span class="text-muted">alshin</span>
         </a>
       <button class="btn btn-link visible-xs" type="button" data-toggle="collapse" data-target=".navbar-collapse">
@@ -11,9 +11,9 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
           <!--
-        <li><a href="{{ "/index.html" | prepend: site.baseurl }}">HOME</a></li>
+          <li><a href="{{ "/index.html" | prepend: site.baseurl  }}">HOME</a></li>
         <li><a href="###">Category</a></li>
-       <li><a href="{{ "/about.html" | prepend: site.baseurl }}">About me</a></li>
+        <li><a href="{{ "/about.html" | prepend: site.baseurl  }}">About me</a></li>
         <li><a href="{{ "/timeline.html" | prepend: site.baseurl }}">Timeline</a></li>
         -->
       </ul>
