--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,5 @@
     <link rel="stylesheet" href="{{ "/assets/css/highlight.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
 
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1262884701'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1262884701%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan style='display:none;' id='cnzz_stat_icon_1262884701'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/z_stat.php%3Fid%3D1262884701' type='text/javascript'%3E%3C/script%3E"));</script>
 </head>
