--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -12,7 +12,7 @@
 
     {% for page in (1..paginator.total_pages) %}
       {% if page == paginator.page %}
-        <li class="active"><a href="{{ site.baseurl }}page{{page}}">{{ page }}</a></li>
+        <li class="active"><a href="/page{{page}}">{{ page }}</a></li>
       {% elsif page == 1 %}
         <li><a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a></li>
       {% else %}
@@ -21,7 +21,7 @@
     {% endfor %}
 
     {% if paginator.next_page %}
-      <li><a href="{{ site.baseurl }}page{{paginator.next_page}}"><i class="fa fa-chevron-right"></i></a></li>
+      <li><a href="/page{{paginator.next_page}}"><i class="fa fa-chevron-right"></i></a></li>
     {% else %}
       <li><a href="#"><i class="fa fa-chevron-right"></i></a></li>
     {% endif %}
