--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -16,7 +16,7 @@
       {% elsif page == 1 %}
         <li><a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a></li>
       {% else %}
-        <li><a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
+        <li><a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', /page }}">{{ page }}</a></li>
       {% endif %}
     {% endfor %}
 
