--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -4,7 +4,7 @@
       {% if paginator.page == 2 %}
         <li><a href="{{ site.baseurl }}"><i class="fa fa-chevron-left"></i></a></li>
       {% else %}
-        <li><a href="{{ site.baseurl }}page{{paginator.previous_page}}"><i class="fa fa-chevron-left"></i></a></li>
+        <li><a href="/page{{paginator.previous_page}}"><i class="fa fa-chevron-left"></i></a></li>
       {% endif %}
     {% else %}
       <li><a href="#"><i class="fa fa-chevron-left"></i></a></li>
@@ -14,7 +14,7 @@
       {% if page == paginator.page %}
         <li class="active"><a href="/page{{page}}">{{ page }}</a></li>
       {% elsif page == 1 %}
-        <li><a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a></li>
+        <li><a href="{{ '/index.html' | replace: '//', '/' }}">{{ page }}</a></li>
       {% else %}
         <li><a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', /page }}">{{ page }}</a></li>
       {% endif %}
