--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,9 +6,9 @@
         <section id="wrapper">
             <header id="header">
                 <a href="{{ "/about.html" | prepend: site.baseurl }}">
-                  <div class="github-card" data-github="yunshang" data-width="65%" data-height="" data-theme="medium"></div>
-                  <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                    <!-- <img id="avatar" class="2x" src="{{ "/assets/images/profile.jpg" | prepend: site.baseurl }}"> -->
+                  <!-- <div class="github-card" data-github="yunshang" data-width="65%" data-height="" data-theme="medium"></div> -->
+                  <!-- <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>                                   -->
+                    <img id="avatar" class="2x" src="{{ "/assets/images/profile.jpg" | prepend: site.baseurl }}">
                 </a>
                 <h2>耿耿直始，百折不回</h2>
             </header>
